# rust-tool-base

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  requirements-lock.txt  rustfmt.toml  zensical.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependabot-automerge.yaml  docs.yaml  release.yaml
assets/init/: config.yaml
crates/rtb/: Cargo.toml
crates/rtb-ai/: Cargo.toml
crates/rtb-ai/src/: anthropic.rs  client.rs  config.rs  error.rs  lib.rs  message.rs  thinking.rs
crates/rtb-ai/tests/: unit.rs
crates/rtb-app/: Cargo.toml
crates/rtb-app/src/: app.rs  command.rs  credentials.rs  features.rs  lib.rs  metadata.rs  typed_config.rs
crates/rtb-app/tests/: bdd.rs  credentials_provider.rs  trybuild.rs  typed_config.rs  unit.rs  v0_4_additions.rs
crates/rtb-app/tests/features/: app.feature
crates/rtb-app/tests/steps/: app_steps.rs  mod.rs
crates/rtb-app/tests/trybuild/: feature_non_exhaustive.rs  feature_non_exhaustive.stderr  metadata_requires_name.rs  metadata_requires_name.stderr  releasesource_non_exhaustive.rs
crates/rtb-assets/: Cargo.toml
crates/rtb-assets/src/: assets.rs  error.rs  lib.rs  source.rs
crates/rtb-assets/tests/: bdd.rs  unit.rs
crates/rtb-assets/tests/features/: assets.feature
crates/rtb-assets/tests/steps/: assets_steps.rs  mod.rs
crates/rtb-cli/: Cargo.toml
crates/rtb-cli-bin/: Cargo.toml
crates/rtb-cli-bin/src/: main.rs
crates/rtb-cli/src/: application.rs  builtins.rs  config_cmd.rs  credentials.rs  health.rs  init.rs  lib.rs  render.rs  runtime.rs  telemetry.rs
crates/rtb-cli/tests/: bdd.rs  output_flag.rs  trybuild.rs  unit.rs
crates/rtb-cli/tests/features/: cli.feature
crates/rtb-cli/tests/steps/: cli_steps.rs  mod.rs
crates/rtb-cli/tests/trybuild/: builder_requires_metadata.rs  builder_requires_metadata.stderr  builder_requires_version.rs  builder_requires_version.stderr
crates/rtb-config/: Cargo.toml
crates/rtb-config/src/: config.rs  error.rs  lib.rs  mutable.rs  watch.rs
crates/rtb-config/tests/: bdd.rs  mutable.rs  unit.rs
crates/rtb-config/tests/features/: config.feature
crates/rtb-config/tests/steps/: config_steps.rs  mod.rs
crates/rtb-core/: Cargo.toml
crates/rtb-core/src/: app.rs  command.rs  features.rs  lib.rs  metadata.rs  version.rs
crates/rtb-core/tests/: bdd.rs  unit.rs
crates/rtb-core/tests/features/: core.feature
crates/rtb-core/tests/steps/: core_steps.rs  mod.rs
crates/rtb-core/tests/trybuild/: feature_non_exhaustive.rs  metadata_requires_name.rs  releasesource_non_exhaustive.rs  releasesource_non_exhaustive.stderr
crates/rtb-credentials/: Cargo.toml
crates/rtb-credentials/src/: bearing.rs  error.rs  lib.rs  reference.rs  resolver.rs  store.rs
crates/rtb-credentials/tests/: bdd.rs  credential_bearing.rs  unit.rs
crates/rtb-credentials/tests/features/: credentials.feature
crates/rtb-credentials/tests/steps/: cred_steps.rs  mod.rs
crates/rtb-docs/: Cargo.toml
crates/rtb-docs/src/: ai.rs  browser.rs  command.rs  error.rs  index.rs  lib.rs  loader.rs  render.rs  search.rs  server.rs
crates/rtb-error/: Cargo.toml
crates/rtb-error/src/: hook.rs  lib.rs
crates/rtb-error/tests/: bdd.rs  trybuild.rs  unit.rs
crates/rtb-error/tests/features/: error.feature
crates/rtb-error/tests/steps/: error_steps.rs  mod.rs
crates/rtb-error/tests/trybuild/: non_exhaustive.rs  non_exhaustive.stderr
crates/rtb-mcp/: Cargo.toml
crates/rtb-mcp/src/: command.rs  error.rs  lib.rs  server.rs  transport.rs
crates/rtb-mcp/tests/: t1_trait_defaults.rs  t3_t6_server_dispatch.rs  t7_t10_misc.rs  t9_s1_roundtrip.rs
crates/rtb-redact/: Cargo.toml
crates/rtb-redact/src/: lib.rs
crates/rtb-redact/tests/: bdd.rs  unit.rs
crates/rtb-redact/tests/features/: redact.feature
crates/rtb-redact/tests/steps/: mod.rs  redact_steps.rs
crates/rtb-telemetry/: Cargo.toml
crates/rtb-telemetry/src/: consent.rs  context.rs  error.rs  event.rs  http_sink.rs  lib.rs  machine.rs  otlp_sink.rs  sink.rs
crates/rtb-telemetry/tests/: bdd.rs  consent.rs  unit.rs
crates/rtb-telemetry/tests/features/: telemetry.feature
crates/rtb-telemetry/tests/snapshots/: unit__t6_event_json_snapshot.snap
crates/rtb-telemetry/tests/steps/: mod.rs  tele_steps.rs
crates/rtb-test-support/: Cargo.toml
crates/rtb-test-support/src/: lib.rs
crates/rtb-test-support/tests/: unit.rs
crates/rtb-tui/: Cargo.toml
crates/rtb-tui/src/: error.rs  lib.rs  render.rs  spinner.rs  wizard.rs
crates/rtb-tui/tests/: render_table_dual.rs  spinner_no_tty.rs  wizard_back_navigation.rs  wizard_cancellation.rs  wizard_state_threading.rs
crates/rtb-update/: Cargo.toml
crates/rtb-update/src/: asset.rs  command.rs  error.rs  flow.rs  lib.rs  options.rs  updater.rs  verify.rs
crates/rtb-update/tests/: unit.rs
crates/rtb-vcs/: Cargo.toml
crates/rtb-vcs/src/: bitbucket.rs  codeberg.rs  config.rs  direct.rs  gitea.rs  github.rs  gitlab.rs  http.rs  lib.rs  release.rs
crates/rtb-vcs/src/git/: auth.rs  blame.rs  checkout.rs  clone.rs  commit.rs  diff.rs  error.rs  fetch.rs  init.rs  mod.rs  status.rs  walk.rs
crates/rtb-vcs/tests/: bdd.rs  bitbucket_backend.rs  direct_backend.rs  gitea_backend.rs  gitea_integration.rs  github_backend.rs  gitlab_backend.rs  repo_blame_unit.rs  repo_fetch_checkout_unit.rs  repo_read_paths_unit.rs  repo_unit.rs  repo_write_paths_unit.rs  unit.rs
crates/rtb-vcs/tests/features/: github.feature  registry.feature  repo_lifecycle.feature  repo_read_paths.feature  repo_write_paths.feature
crates/rtb-vcs/tests/steps/: github_steps.rs  mod.rs  registry_steps.rs  repo_read_paths_steps.rs  repo_steps.rs  repo_write_paths_steps.rs
crates/rtb/src/: lib.rs
docs/: index.md
docs/about/: ecosystem-survey.md  why-rtb.md
docs/components/: index.md  rtb-app.md  rtb-assets.md  rtb-cli.md  rtb-config.md  rtb-core.md  rtb-credentials.md  rtb-error.md  rtb-mcp.md  rtb-telemetry.md  rtb-test-support.md  rtb-tui.md
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/minimal/tests/: smoke.rs
(+31 files in other folders)
