[package]
name = "rtb-app"
description = "Rust Tool Base — application context, tool metadata, runtime features, and the Command plugin trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rtb-error = { path = "../rtb-error", version = "0.3.0" }
rtb-config = { path = "../rtb-config", version = "0.3.0" }
rtb-assets = { path = "../rtb-assets", version = "0.3.0" }
rtb-credentials = { path = "../rtb-credentials", version = "0.3.0" }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
bon = { workspace = true }
linkme = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
trybuild = "1"
