[package]
name = "rtb-assets"
description = "Rust Tool Base — embedded-asset + overlay filesystem abstraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rust-embed = { workspace = true }
vfs = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
json-patch = { workspace = true }
tracing = { workspace = true }
