[package]
name = "rtb-assets"
description = "Rust Tool Base — embedded-asset + overlay filesystem abstraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rust-embed = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
tempfile = "3"
