[package]
name = "rtb-cli"
description = "Rust Tool Base — CLI application scaffolding, clap integration, and built-in commands."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rtb-core = { path = "../rtb-core", version = "0.1.0" }
rtb-error = { path = "../rtb-error", version = "0.1.0" }
rtb-config = { path = "../rtb-config", version = "0.1.0" }
rtb-assets = { path = "../rtb-assets", version = "0.1.0" }
clap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
async-trait = { workspace = true }
linkme = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
insta = { workspace = true }
trybuild = "1"
semver = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
