[package]
name = "rtb-config"
description = "Rust Tool Base — layered, typed configuration backed by figment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
figment = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
arc-swap = { workspace = true }
# v0.2 (hot reload + schema export) will add: notify, notify-debouncer-full,
# schemars. They remain in the workspace dep pool, unused until then.

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
tempfile = "3"
