[package]
name = "rtb-config"
description = "Rust Tool Base — layered, typed configuration backed by figment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = []
# Enables `Config::watch_files()` — background file watcher that
# calls `reload()` on debounced change events.
hot-reload = ["dep:notify", "dep:notify-debouncer-full"]
# Enables `Config::schema()` and `Config::write()` — the
# rtb-cli v0.4 `config get / set / schema / validate` subcommands.
# Default-off so tools that don't need write or schema export don't
# pay the schemars / serde_yaml / toml dependency weight.
mutable = ["dep:schemars", "dep:serde_json", "dep:serde_yaml", "dep:toml"]

[dependencies]
figment = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
arc-swap = { workspace = true }
# `tokio::sync::watch` powers `Config::subscribe()`. The workspace
# dep already enables `full`; narrowing per-crate is a no-op under
# cargo's additive-features model, so just inherit.
tokio = { workspace = true }
# Gated on `hot-reload`.
notify = { workspace = true, optional = true }
notify-debouncer-full = { workspace = true, optional = true }
# Gated on `mutable`.
schemars = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
tempfile = "3"
