[package]
name = "rtb-core"
description = "Rust Tool Base — core application context, service traits, and tool metadata."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rtb-error = { path = "../rtb-error", version = "0.1.0" }
rtb-config = { path = "../rtb-config", version = "0.1.0" }
rtb-assets = { path = "../rtb-assets", version = "0.1.0" }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
semver = { workspace = true }
bon = { workspace = true }
linkme = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
trybuild = "1"
