[package]
name = "rtb-credentials"
description = "Rust Tool Base — OS keychain credential storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
keyring = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
