[package]
name = "rtb-credentials"
description = "Rust Tool Base — OS keychain credential storage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = []
# Opt-in Linux persistence via freedesktop Secret Service (D-Bus).
# Pulls in `libdbus-sys`, which at build time requires `pkg-config` and
# `libdbus-1-dev` on the host. Without this feature the Linux backend is
# the pure-Rust kernel keyutils (`linux-native`), which is session-scoped.
linux-persistent = ["keyring/sync-secret-service"]

[dependencies]
keyring = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
