[package]
name = "rtb-docs"
description = "Rust Tool Base — TUI documentation browser with optional AI Q&A."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rtb-core = { path = "../rtb-core", version = "0.1.0" }
rtb-error = { path = "../rtb-error", version = "0.1.0" }
rtb-assets = { path = "../rtb-assets", version = "0.1.0" }
ratatui = { workspace = true }
crossterm = { workspace = true }
termimad = { workspace = true }
tokio = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
