[package]
name = "rtb-error"
description = "Rust Tool Base — error types and the diagnostic report pipeline."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
