[package]
name = "rtb-mcp"
description = "Rust Tool Base — Model Context Protocol server that exposes tool commands as MCP tools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rtb-core = { path = "../rtb-core", version = "0.1.0" }
rtb-error = { path = "../rtb-error", version = "0.1.0" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
