[package]
name = "rtb-mcp"
description = "Rust Tool Base — Model Context Protocol server that exposes tool commands as MCP tools."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
rtb-app = { path = "../rtb-app", version = "0.3.0" }
rtb-error = { path = "../rtb-error", version = "0.3.0" }
rmcp = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
linkme = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
semver = { workspace = true }
# `client` enables `rmcp`'s in-process MCP client used by the T9 +
# S1 round-trip tests. `transport-io` is already on for the server.
rmcp = { workspace = true, features = ["client"] }
