[package]
name = "rtb-redact"
description = "Rust Tool Base — free-form secret redaction for log lines, telemetry events, and diagnostic surfaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
once_cell = { workspace = true }
phf = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }
