[package]
name = "rtb-telemetry"
description = "Rust Tool Base — opt-in anonymous usage telemetry with pluggable sinks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
machine-uid = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
# v0.2 will add: reqwest (HttpSink), opentelemetry* (OtlpSink),
# tracing + tracing-opentelemetry.

[dev-dependencies]
cucumber = { workspace = true }
insta = { workspace = true }
tempfile = "3"
