[package]
name = "rtb-telemetry"
description = "Rust Tool Base — opt-in anonymous usage telemetry with pluggable sinks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[features]
default = []
# Enables HttpSink + OtlpSink (gRPC + HTTP/protobuf transports).
# Pulls in reqwest, url, secrecy, and the opentelemetry stack.
remote-sinks = [
    "dep:reqwest",
    "dep:url",
    "dep:secrecy",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tonic",
]

[dependencies]
machine-uid = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
rtb-redact = { path = "../rtb-redact", version = "0.2.0" }

# Optional — gated on the `remote-sinks` feature.
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[dev-dependencies]
cucumber = { workspace = true }
insta = { workspace = true }
tempfile = "3"
wiremock = { workspace = true }
