[package]
name = "rtb-tui"
description = "Rust Tool Base — reusable TUI widgets: forms, wizards, prompts, tables."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
inquire = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tabled = { workspace = true }
owo-colors = { workspace = true }
console = { workspace = true }
miette = { workspace = true }
