[package]
name = "rtb-tui"
description = "Rust Tool Base — reusable TUI widgets: forms, wizards, prompts, tables."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
inquire = { workspace = true }
tabled = { workspace = true }
console = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
